# kcl

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml
scripts/eval/: run_eval.sh
scripts/eval/configs/: kcl_essay.yaml  kcl_mcqa.yaml
scripts/infer/: run_infer.sh
scripts/infer/configs/: kcl_essay.yaml  kcl_mcqa.yaml
src/kcl/evaluation/: eval.py
src/kcl/evaluation/judges/: __init__.py  kbl.py  kcl.py  kcl_essay_judge.py  kcl_mcqa_judge.py
src/kcl/evaluation/utils/: text_utils.py
src/kcl/inference/: infer.py
src/kcl/models/: __init__.py  claude.py  gemini.py  localmodel.py  oai.py
src/kcl/tasks/: __init__.py  kcl_essay.py  kcl_mcqa.py
